--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -14,6 +14,11 @@
   //opacity: 0.7;
 }
 
+.btn-custom {
+  background-color: #ff7000;
+  border-color: #ff7000;
+}
+
 .bottom-header {
   .container {
     margin: 0px;
@@ -134,13 +139,16 @@ input[type=number] {
 }
 
 input[type="email"], input[type="password"], input[type="number"], input[type="text"], input[type="date"], select, div.styled, input[type="file"] {
-  border: 2px solid #767171 !important;
+  border: 1px solid #767171 !important;
   height: 35px !important;
+  font-size: 16px;
+  margin-bottom: 0px !important;
 }
 
 textarea {
-  border: 2px solid #767171 !important;
+  border: 1px solid #767171 !important;
   height: 80px;
+  font-size: 16px;
 }
 
 footer {
@@ -376,6 +384,7 @@ textarea.error, input.error, select.error {
 .loan-table {
   th, td {
     text-align: center;
+    vertical-align: middle;
   }
   div {
     margin: 0 auto;
@@ -667,3 +676,47 @@ homeStrip .container>p {
   margin-bottom: 0px;
 }
 
+.wrapper {
+  display: grid !important;
+  width:100%;
+  height:100%;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  .file-upload {
+    height:100px;
+    width:100px;
+    border-radius: 100px;
+    position:relative;
+    
+    display:flex;
+    justify-content:center;
+    align-items: center;  
+
+    border:4px solid #FFFFFF;
+    overflow:hidden;
+    background-image: linear-gradient(to bottom, #2590EB 50%, #FFFFFF 50%);
+    background-size: 100% 200%;
+    transition: all 1s;
+    color: #FFFFFF;
+    font-size:100px;
+
+    input[type='file']{
+      height:100px !important;
+      width:100px;
+      position:absolute;
+      top:0;
+      left:0;
+      opacity:0;
+      cursor:pointer;
+    }
+
+    &:hover{
+      background-position: 0 -100%;
+      color:#2590EB;
+    }
+    i {
+      font-size: 40px;
+    }
+  }
+}
