--- a/app/assets/stylesheets/home_loan.scss
+++ b/app/assets/stylesheets/home_loan.scss
@@ -1,3 +1,24 @@
-// Place all the styles related to the HomeLoan controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.basic_home_loan .container, .update_home_offer .container, .home_loan_address .container, .home_loan_assets .container{
+	padding: 0px 15px 15px 15px;
+	box-shadow: 0 2px 4px 0 #052f5f0a, 0 12px 16px 0 #bae8cf99;
+	border-radius: 10px;	
+}
+
+.basic_home_loan .container .heading, .update_home_offer .container .heading, .home_loan_address .container .heading, .home_loan_assets .container .heading,{
+  height: 70px;
+  background: linear-gradient(135deg, #294e9b, #6c6ea0);
+  color: #ffffff;
+  border-radius: 10px 10px 0px 0px;
+}
+
+.basic_home_loan .container .heading h3, .update_home_offer .container .heading h3, .home_loan_address .container .heading h3, .home_loan_assets .container .heading h3{
+  padding-top: 15px;
+}
+
+.basic_home_loan .form-group label, .update_home_offer .form-group label, .home_loan_address .form-group label, .home_loan_assets .form-group label{
+  font-size: 18px;
+}
+
+.basic_home_loan .container .first-row, .update_home_offer .container .first-row, .home_loan_address .container .first-row, .home_loan_assets .container .first-row,{
+  padding-top: 20px;
+}
