--- a/app/assets/stylesheets/personal_loan.scss
+++ b/app/assets/stylesheets/personal_loan.scss
@@ -1,3 +1,27 @@
-// Place all the styles related to the PersonalLoan controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.basic_personal_loan, .personal_loan, .employer_detail, .personal_loan_address, .personal_loan_assets {
+  .container {
+    padding: 0px 15px 15px 15px;
+    box-shadow: 0 2px 4px 0 #052f5f0a, 0 12px 16px 0 #bae8cf99;
+    border-radius: 10px;
+    .heading {
+      height: 70px;
+      background: linear-gradient(135deg,#294e9b,#6c6ea0);
+      color: #ffffff;
+      border-radius: 10px 10px 0px 0px;
+      h3 {
+        padding-top: 15px;      
+      }
+    }
+    .first-row {
+      padding-top: 20px;
+    }
+  }
+  .form-group {
+    label {
+      font-size: 18px;
+    }
+  }
+  button {
+    width: 10%;
+  }
+}
