--- a/app/views/business_loan/step5.html.erb
+++ b/app/views/business_loan/step5.html.erb
@@ -15,35 +15,56 @@
     </div>
 </section>
 <div class="container custom-container">
-  <div class="container">
-    <div class="row">
-      <table class="table loan-table">
-        <thead class="thead-light">
-          <tr>
-            <th>Bank</th>
-            <th>Interest Rate</th>
-            <th>Processing Fee</th>
-            <th>EMI</th>
-            <th>Proceed</th>
-          </tr>
-        </thead>
-        <% @banks.each do |bank| %>
-          <tr>
-            <td><div class="img-effect" style="margin-bottom: 0;"><%= image_tag url_for(bank.bank_image), width: 200, height: 100 %></div></td>
-            <td><b><%= percentage_roi(bank.business_loan_bank_info.roi) %><br><span>(Floating)</span></b></td>
-            <td><b><%= number_to_currency("%.2f" % processing_fee(bank.business_loan_bank_info.processing_fee, @business_loan.loan_amount), unit: "₹ ") %></b></td>
-            <td><b><%= number_to_currency(calculate_emi(bank.business_loan_bank_info, @business_loan), unit: "₹ ") %></b></td>
-            <td>
-              <b>
-                <%= form_for @business_loan, :url => { :action => "select_bank" }, html: {id:  "business_loan_bank", class: "business_loan_bank"} do |f| %>
-                  <input type="hidden" name="business_loan_bank[id]" value="<%= bank.business_loan_bank_info.id %>">
-                  <button type="submit" class="btn btn-default">Apply</button>
-                <%end%>
-              </b>
-            </td>
-          </tr>
-        <%end%>
-      </table>
+  <%= form_for @business_loan, :url => { :action => "updated_address"}, html: { id:  "business_loan_address", class: "business_loan_address" } do |f| %>
+    <div class="container">
+      <div class="row heading">
+        <div class="col-md-4">
+          <div class="form-group">
+            <h3>Address Details</h3>
+          </div>
+        </div>
+      </div>
+      <div class="row first-row">
+         <div class="col-md-4">
+          <div class="form-group">
+            <label>Present Address</label>
+            <%= f.text_area(:address, class: "form-control") %>
+          </div>
+        </div>
+         <div class="col-md-4">
+          <div class="form-group">
+            <label>City</label>
+            <%= f.select(:city, only_cities,class: "form-control") %>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="form-group">
+            <label>Pincode</label>
+            <%= f.number_field(:pincode, class: "form-control") %>
+          </div>
+        </div>
+      </div>
+       <div class="row">
+        <div class="col-md-4">
+          <div class="form-group">
+            <label>Office Address</label>
+            <%= f.text_area(:business_address, class: "form-control") %>
+          </div>
+        </div>
+         <div class="col-md-4">
+          <div class="form-group">
+            <label>Office City</label>
+            <%= f.select(:business_city, only_cities,class: "form-control") %>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="form-group">
+            <label>Office Pincode</label>
+            <%= f.number_field(:business_pincode, class: "form-control") %>
+          </div>
+        </div>
+      </div><br>
+      <button type="submit" class="btn btn-custom">Process</button>
     </div>
-  </div>
+  <%end%>
 </div>
