--- a/app/views/loan_against_property/step2.html.erb
+++ b/app/views/loan_against_property/step2.html.erb
@@ -15,23 +15,74 @@
     </div>
 </section>
 <section class="personal-loan-section custom-container">
-  <%= form_for @loan_against_property, :url => { :action => @loan_against_property.id.nil? ? "update_otp_status" : "update_otp_status"}, html: {id:  "otp_loan_against_property", class: "otp_loan_against_property"} do |f| %>
+  <%= form_for @loan_against_property, :url => { :action => "update_against_property_offer"}, html: {id:  "update_against_property_offer", class: "update_against_property_offer"} do |f| %>
     <div class="container">
-      <div class="row">
-        <div class="col-md-4"></div>
+      <div class="row heading">
         <div class="col-md-4">
           <div class="form-group">
-            <h3>Verify OTP</h3>
+            <h3>Personal Details</h3>
           </div>
-          <div class="form-group">
-            <span>OTP <span>*</span></span>
-            <%= f.number_field(:otp, class: "form-control", value: "") %>
-          </div> 
-          <button type="submit" class="btn btn-default">Submit</button>
-          <a href="javascript:void(o)" id="loan-against-property-resend-otp" style="float: right;">Resend</a>
         </div>
-        <div class="col-md-4"></div>
       </div>
+      <div class="row first-row">
+        <div class="col-md-6">
+          <div class="form-group">
+            <label>Property Cost
+              <a href="" data-toggle="tooltip" data-placement="top" title="!">
+                <i class="fa fa-info-circle" aria-hidden="true"></i>
+              </a>
+            </label>
+            <%= f.number_field(:property_cost, class: "form-control") %>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="form-group">
+            <label>Employment Type
+              <a href="" data-toggle="tooltip" data-placement="top" title="!">
+                <i class="fa fa-info-circle" aria-hidden="true"></i>
+              </a>
+            </label>
+            <%= f.select(:employment_type, employment_type, class: "form-control") %>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-6">
+          <div class="form-group">
+            <label>Total EMI pay currently
+              <a href="" data-toggle="tooltip" data-placement="top" title="!">
+                <i class="fa fa-info-circle" aria-hidden="true"></i>
+              </a>
+            </label>
+            <%= f.number_field(:current_emi, class: "form-control") %>
+          </div>
+        </div>        
+        <div class="col-md-6">
+          <div class="form-group">
+            <label>Email
+              <a href="" data-toggle="tooltip" data-placement="top" title="!">
+                <i class="fa fa-info-circle" aria-hidden="true"></i>
+              </a>
+            </label>
+            <%= f.email_field(:email, class: "form-control") %>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-6">
+          <div class="form-group">
+            <label>Date Of Birth
+              <a href="" data-toggle="tooltip" data-placement="top" title="!">
+                <i class="fa fa-info-circle" aria-hidden="true"></i>
+              </a>
+            </label>
+            <%= f.date_field(:dob, class: "form-control", max: "#{Time.zone.now - 21.years}") %>
+          </div>
+        </div>        
+        <div class="col-md-6">
+        </div>
+      </div>
+      <button type="submit" class="btn btn-default">Submit</button>
     </div>
   <%end%>
 </section>
