--- a/app/views/loan_against_property/step3.html.erb
+++ b/app/views/loan_against_property/step3.html.erb
@@ -15,125 +15,19 @@
     </div>
 </section>
 <section class="personal-loan-section custom-container">
-  <%= form_for @loan_against_property, :url => { :action => @loan_against_property.id.nil? ? "create" : "update" }, html: {id: "loan_against_property", class: "loan_against_property"} do |f| %>
+  <%= form_for @loan_against_property, :url => { :action => "update_otp_status" }, html: {id: "otp_loan_against_property", class: "otp_loan_against_property"} do |f| %>
     <div class="container">
       <div class="row">
+        <div class="col-md-4"></div>
         <div class="col-md-4">
-          <h3>Personal Details</h3>
+          <div class="form-group">
+            <%= f.number_field(:otp, class: "form-control", value: "", placeholder: "OTP") %>
+          </div> 
+          <button type="submit" class="btn btn-default">Submit</button>
+          <a href="javascript:void(o)" id="home-loan-resend-otp" style="float: right;">Resend</a>
         </div>
+        <div class="col-md-4"></div>
       </div>
-      <div class="row">
-        <div class="col-md-4">
-          <div class="form-group">
-            <span>DOB <span>*</span></span>
-            <%= f.date_field(:dob, class: "form-control", max: "#{Time.zone.now - 18.years}") %>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="form-group">
-            <span>Gender <span>*</span></span>
-            <%= f.select(:gender, gender) %>
-          </div>          
-        </div>
-        <div class="col-md-4">
-          <div class="form-group">
-            <span>Marital Status <span>*</span></span>
-            <%= f.select(:marital_status, marital_status, class: "form-control") %>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-4">
-          <div class="form-group">
-            <span>Highest Qualification <span>*</span></span>
-            <%= f.select(:highest_qualification, highest_qualification, class: "form-control") %>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="form-group">
-            <span>Dependent Number <span>*</span></span>
-            <%= f.select(:no_of_dependent, dependent_number, class: "form-control") %>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="form-group">
-            <span>Stying in current Residence Since: <span>*</span></span>
-            <%= f.select(:current_residency_since_year, current_residency_since_year, class: "form-control") %>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-4">
-          <div class="form-group">
-            <span>Stying at current City Since: <span>*</span></span>
-            <%= f.select(:current_city_since_year, current_city_since_year, class: "form-control") %>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="form-group">
-            <span>Personal PAN Number: <span>*</span></span>
-            <%= f.text_field(:pan_number, class: "form-control") %>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="form-group">
-            <span>Purpose Of Loan: <span>*</span></span>
-            <%= f.select(:purpose_of_loan, purpose_of_loan, class: "form-control") %>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-4">
-          <h3>Current Residence Details</h3>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-4">
-          <div class="form-group">
-            <span>Address Line 1: <span>*</span></span>
-            <%= f.text_area(:address_line1, class: "form-control") %>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="form-group">
-            <span>Address Line 2: <span>*</span></span>
-            <%= f.text_area(:address_line2, class: "form-control") %>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="form-group">
-            <span>Landmark: <span>*</span></span>
-            <%= f.text_area(:landmark, class: "form-control") %>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-3">
-          <div class="form-group">
-            <span>Residential Type: <span>*</span></span>
-            <%= f.select(:residential_type, residence_type, class: "form-control") %>
-          </div>
-        </div>
-        <div class="col-md-3">
-          <div class="form-group">
-            <span>State: <span>*</span></span>
-            <%= f.select(:state, states, class: "form-control") %>
-          </div>
-        </div>
-        <div class="col-md-3">
-          <div class="form-group">
-            <span>City: <span>*</span></span>
-            <%= f.select(:city, cities(f, :state, :city), class: "form-control") %>
-          </div>
-        </div>
-        <div class="col-md-3">
-          <div class="form-group">
-            <span>Pincode: <span>*</span></span>
-            <%= f.number_field(:pincode, class: "form-control") %>
-          </div>
-        </div>
-      </div>
-      <button type="submit" class="btn btn-default">Submit</button>
     </div>
   <%end%>
 </section>
