--- a/app/views/loan_against_property/step5.html.erb
+++ b/app/views/loan_against_property/step5.html.erb
@@ -15,35 +15,46 @@
   </div>
 </section>
 <div class="container custom-container">
-  <div class="container">
-    <div class="row">
-      <table class="table loan-table">
-        <thead class="thead-light">
-          <tr>
-            <th>Bank</th>
-            <th>Interest Rate</th>
-            <th>Processing Fee</th>
-            <th>EMI</th>
-            <th>Proceed</th>
-          </tr>
-        </thead>
-        <% @banks.each do |bank| %>
-          <tr>
-            <td><div class="img-effect" style="margin-bottom: 0;"><%= image_tag url_for(bank.bank_image), width: 200, height: 100 %></div></td>
-            <td><b><%= percentage_roi(bank.loan_against_property_bank_info.roi) %><br><span>(Floating)</span></b></td>
-            <td><b><%= number_to_currency("%.2f" % processing_fee(bank.loan_against_property_bank_info.processing_fee, @loan_against_property.loan_amount), unit: "₹ ") %></b></td>
-            <td><b><%= number_to_currency(calculate_emi(bank.loan_against_property_bank_info, @loan_against_property), unit: "₹ ") %></b></td>
-            <td>
-              <b>
-                <%= form_for @loan_against_property, :url => { :action => "select_bank" }, html: {id:  "loan_against_property_bank", class: "loan_against_property_bank"} do |f| %>
-                  <input type="hidden" name="loan_against_property_bank[id]" value="<%= bank.loan_against_property_bank_info.id %>">
-                  <button type="submit" class="btn btn-default">Apply</button>
-                <%end%>
-              </b>
-            </td>
-          </tr>
-        <%end%>
-      </table>
+  <%= form_for @loan_against_property, :url => { :action => "update_address" }, html: {id:  "loan_against_property_address", class: "loan_against_property_address"} do |f| %>
+    <div class="container">
+      <div class="row heading">
+        <div class="col-md-4">
+          <h3>Professional Loan Offer</h3>
+        </div>
+      </div>
+      <div class="row first-row"> 
+        <div class="col-md-4">
+          <div class="form-group">
+            <label>Address
+              <a href="" data-toggle="tooltip" data-placement="top" title="!">
+                <i class="fa fa-info-circle" aria-hidden="true"></i>
+              </a>
+            </label>
+            <%= f.text_area(:address, class: "form-control") %>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="form-group">
+            <label>City
+              <a href="" data-toggle="tooltip" data-placement="top" title="!">
+                <i class="fa fa-info-circle" aria-hidden="true"></i>
+              </a>
+            </label>
+            <%= f.select(:city, only_cities, class: "form-control") %>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="form-group">
+            <label>Pincode
+              <a href="" data-toggle="tooltip" data-placement="top" title="!">
+                <i class="fa fa-info-circle" aria-hidden="true"></i>
+              </a>
+            </label>
+            <%= f.number_field(:pincode, class: "form-control") %>
+          </div>
+        </div>
+      </div>    
+      <button type="submit" class="btn btn-default">Submit</button>
     </div>
-  </div>
+  <%end%>
 </div>
