--- a/app/views/personal_loan/step1.html.erb
+++ b/app/views/personal_loan/step1.html.erb
@@ -15,70 +15,23 @@
     </div>
 </section>
 <section class="personal-loan-section custom-container">
-  <%= form_for @personal_loan, :url => { :action => @personal_loan.id.nil? ? "create_otp" : "create_otp"}, html: {id:  "basic_personal_loan", class: "basic_personal_loan"} do |f| %>
-    <div class="container">
-      <div class="row">
-        <div class="col-md-4">
-          <div class="form-group">
-            <h3>Personal Details</h3>
-          </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-4">
+        <div class="form-group">
         </div>
       </div>
-      <div class="row">
-        <div class="col-md-6">
-          <div class="form-group">
-            <span>First Name <span>*</span></span>
-            <%= f.text_field(:first_name, class: "form-control") %>
-          </div>
-        </div>
-        <div class="col-md-6">
-          <div class="form-group">
-            <span>Middle Name <span>*</span></span>
-            <%= f.text_field(:middle_name, class: "form-control") %>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-6">
-          <div class="form-group">
-            <span>Last Name <span>*</span></span>
-            <%= f.text_field(:last_name, class: "form-control") %>
-          </div>
-        </div>        
-        <div class="col-md-6">
-          <div class="form-group">
-            <span>Mobile Number <span>*</span></span>
-            <%= f.number_field(:mobile_number, class: "form-control") %>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-4">
-          <div class="form-group">
-            <span>Email <span>*</span></span>
-            <%= f.text_field(:email, class: "form-control") %>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="form-group">
-            <span>Loan Amount <span>*</span></span>
-            <%= f.number_field(:loan_amount, class: "form-control") %>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="form-group">
-            <span>Tenure <span>*</span></span>
-            <%= f.select(:tenure, tenure, class: "form-control") %>
-          </div>
-        </div>        
-      </div>
-      <div class="row">
-        <div class="col-md-4">
-          <%= f.check_box(:terms_and_conditions) %>
-          <%= f.label "Terms & Conditions", for: 'personal_loan_terms_and_conditions' %>
-        </div>
-      </div>
-      <button type="submit" class="btn btn-default">Submit</button>
     </div>
-  <%end%>
+    <%= form_for @personal_loan, :url => { :action => @personal_loan.id.nil? ? "create_otp" : "update"}, html: {id:  "basic_personal_loan", class: "basic_personal_loan"} do |f| %>
+      <div class="container">
+        <div class="row heading">
+          <div class="col-md-6">
+            <h3>Loan Application</h3>
+          </div>
+        </div>
+        <%= render partial: "form", locals: { f: f } %>
+        <button type="submit" class="btn btn-custom"><b>Process</b></button>
+      </div>
+    <%end%>
+  </div>
 </section>
