--- a/app/views/personal_loan/step7.html.erb
+++ b/app/views/personal_loan/step7.html.erb
@@ -18,7 +18,7 @@
   <div class="row main-thx-row"> 
     <div class="col-md-4 col-lg-4 col-sm-12 bank-thank-row">
       <div class="bank-thx-img">
-        <%= image_tag url_for(@personal_loan.personal_loan_bank.bank_image), class: "ptnr-icici-bank" %>
+        <%= image_tag  url_for(@personal_loan.personal_loan_bank.bank_image), class: "ptnr-icici-bank" %>
       </div>
       <div>
         <p>Loan Amount</p>
@@ -36,15 +36,15 @@
     <div class="col-md-8 col-lg-8 col-sm-12 thank-row">
       <div class="congo">
         <h3 class="float-left">CONGRATULATIONS</h3>
-        <h4 class="float-right">Reference Number: <%= @personal_loan.reference_number %></h4>        
+        <h4 class="float-right">Reference Number: <%= @personal_loan.reference_number %></h4>
       </div>
       <div>
         <p>
           Your application has been <b>Successfully Submitted.</b> Our loan expert will get back to you with in <b>24 hours</b> to take this application forward.
         </p>
         <p>
-          <a href="/" target="_blank">Growwcapital.in</a> doesn't charge any money from customers for it's loan or credit card offerings. In such case you receive such communication from anyone claiming to be a Growwcapital representative, please contact us to 
-          <a href = "mailto:growwcapital@gmail.com">growwcapital@gmail.com</a>.
+          <a href="/" target="_blank">Growwcapital.com</a> doesn't charge any money from customers for it's loan or credit card offerings. In such case you receive such communication from anyone claiming to be a Growwcapital representative, please contact us to 
+          <a href = "mailto:support@growwcapital.com">support@growwcapital.com</a>.
         </p>
         <p>
           Thank you for choosing Growwcapital!!!
@@ -55,14 +55,14 @@
           <span class="fa fa-volume-control-phone" aria-hidden="true"></span>
           <p>
             Tollfree<br>
-            12-8787-7887
+            +91-88066-44344
           </p>
         </div>
         <div class="div2">
           <span class="fa fa-envelope-o" aria-hidden="true"></span>
           <p>
             Write us to<br>
-            growwcapital@gmail.com
+            support@growwcapital.com
           </p>
         </div>
       </div>
