--- a/app/views/professional_loan/step7.html.erb
+++ b/app/views/professional_loan/step7.html.erb
@@ -43,8 +43,8 @@
           Your application has been <b>Successfully Submitted.</b> Our loan expert will get back to you with in <b>24 hours</b> to take this application forward.
         </p>
         <p>
-          <a href="/" target="_blank">Growwcapital.in</a> doesn't charge any money from customers for it's loan or credit card offerings. In such case you receive such communication from anyone claiming to be a Growwcapital representative, please contact us to 
-          <a href = "mailto:growwcapital@gmail.com">growwcapital@gmail.com</a>.
+          <a href="/" target="_blank">Growwcapital.com</a> doesn't charge any money from customers for it's loan or credit card offerings. In such case you receive such communication from anyone claiming to be a Growwcapital representative, please contact us to 
+          <a href = "mailto:support@growwcapital.com">support@growwcapital.com</a>.
         </p>
         <p>
           Thank you for choosing Growwcapital!!!
@@ -55,14 +55,14 @@
           <span class="fa fa-volume-control-phone" aria-hidden="true"></span>
           <p>
             Tollfree<br>
-            12-8787-7887
+            +91-88066-44344
           </p>
         </div>
         <div class="div2">
           <span class="fa fa-envelope-o" aria-hidden="true"></span>
           <p>
             Write us to<br>
-            growwcapital@gmail.com
+            support@growwcapital.com
           </p>
         </div>
       </div>
